[project]
name = "youqu-pms-driver"
description = ""
authors = [
    { name = "mikigo", email = "huangmingqiang@uniontech.com" },
]
dependencies = [
    "funnylog",
    "requests",
    "click",
]
dynamic = [
  "version",
]
requires-python = ">=3.7"
readme = "README.md"
license = { text = "GPL2.0" }


[project.scripts]
pms-driver = "youqu_pms_driver.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch]
version = { path = "youqu_pms_driver/__version__.py" }

[tool.hatch.build.targets.wheel]
packages = [
    "/youqu_pms_driver",
]

